; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_wiiu_audio.c_ax_audio_limit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_wiiu_audio.c_ax_audio_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AX_AUDIO_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ax_audio_limit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ax_audio_limit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @AX_AUDIO_COUNT, align 4
  %7 = load i32, i32* %2, align 4
  %8 = add nsw i32 %7, %6
  store i32 %8, i32* %2, align 4
  br label %18

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @AX_AUDIO_COUNT, align 4
  %12 = icmp sge i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* @AX_AUDIO_COUNT, align 4
  %15 = load i32, i32* %2, align 4
  %16 = sub nsw i32 %15, %14
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %9
  br label %18

18:                                               ; preds = %17, %5
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
